[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Prefab/Test_Arabic_Language.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/English_H.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Resources/UI/Detail_BG.png" type="Texture" id=3]
[ext_resource path="res://Assets/Prefab/Main_Theme.tres" type="Theme" id=4]
[ext_resource path="res://Assets/Prefab/Detail_Theme.tres" type="Theme" id=5]
[ext_resource path="res://Resources/UI/Next_Arrow.png" type="Texture" id=6]
[ext_resource path="res://Assets/Prefab/Clickable_Lable.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Prefab/Un_Answered_UI.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Prefab/M_Life.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Prefab/WorldEnvironment.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Prefab/M_Test.gd" type="Script" id=11]
[ext_resource path="res://Assets/Prefab/Test_Block.gd" type="Script" id=12]
[ext_resource path="res://Assets/Prefab/Test_Over_M.tscn" type="PackedScene" id=13]
[ext_resource path="res://Assets/Prefab/Quit_Scene.tscn" type="PackedScene" id=14]
[ext_resource path="res://Resources/UI/Review_Btn_02.png" type="Texture" id=15]
[ext_resource path="res://Resources/UI/Next_btn_bg.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]
size = 426
use_mipmaps = true
use_filter = true
extra_spacing_char = 10
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
resource_name = "Done"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Done:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.865 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Done:anchor_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.865 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Done:anchor_bottom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.865 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Done:anchor_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.865 ]
}

[node name="M_Test" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
color = Color( 0.168627, 0.176471, 0.313726, 1 )

[node name="Lessons" type="HBoxContainer" parent="."]
anchor_left = 0.15
anchor_top = 0.05
anchor_right = 0.85
anchor_bottom = 0.05
grow_horizontal = 2
size_flags_vertical = 10
alignment = 1
script = ExtResource( 1 )
dot = ExtResource( 8 )

[node name="Lecture_Num" type="Label" parent="."]
unique_name_in_owner = true
margin_left = 135.0
margin_top = 102.0
margin_right = 563.0
margin_bottom = 614.0
custom_colors/font_color = Color( 0.823529, 0.890196, 0.933333, 1 )
custom_fonts/font = SubResource( 1 )
text = "00"
align = 1
valign = 1

[node name="bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="bg"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.5
margin_bottom = 1152.0
color = Color( 0.47451, 0.411765, 0.54902, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.875

[node name="Main" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 273.0
margin_right = 1080.0
margin_bottom = 380.0
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource( 4 )
custom_constants/line_spacing = 5
text = "Main question here"
autowrap = true

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/Main"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 8.0
margin_bottom = 12.0
color = Color( 0.823529, 0.890196, 0.933333, 1 )

[node name="Test_Block" type="GridContainer" parent="VBoxContainer"]
margin_top = 657.0
margin_right = 1080.0
margin_bottom = 1311.0
size_flags_vertical = 3
theme = ExtResource( 5 )
columns = 3
script = ExtResource( 12 )

[node name="Button" parent="VBoxContainer/Test_Block" instance=ExtResource( 7 )]
margin_left = 68.0
margin_top = 49.0
margin_right = 358.0
margin_bottom = 166.0
size_flags_horizontal = 10

[node name="Button2" parent="VBoxContainer/Test_Block" instance=ExtResource( 7 )]
margin_left = 395.0
margin_top = 49.0
margin_right = 685.0
margin_bottom = 166.0

[node name="Button3" parent="VBoxContainer/Test_Block" instance=ExtResource( 7 )]
margin_left = 723.0
margin_top = 49.0
margin_right = 1013.0
margin_bottom = 166.0
size_flags_horizontal = 2

[node name="Button4" parent="VBoxContainer/Test_Block" instance=ExtResource( 7 )]
margin_left = 68.0
margin_top = 269.0
margin_right = 358.0
margin_bottom = 386.0
size_flags_horizontal = 10

[node name="Button5" parent="VBoxContainer/Test_Block" instance=ExtResource( 7 )]
margin_left = 395.0
margin_top = 269.0
margin_right = 685.0
margin_bottom = 386.0

[node name="Button6" parent="VBoxContainer/Test_Block" instance=ExtResource( 7 )]
margin_left = 723.0
margin_top = 269.0
margin_right = 1013.0
margin_bottom = 386.0
size_flags_horizontal = 2

[node name="Button7" parent="VBoxContainer/Test_Block" instance=ExtResource( 7 )]
margin_left = 68.0
margin_top = 488.0
margin_right = 358.0
margin_bottom = 605.0
size_flags_horizontal = 10

[node name="Button8" parent="VBoxContainer/Test_Block" instance=ExtResource( 7 )]
margin_left = 395.0
margin_top = 488.0
margin_right = 685.0
margin_bottom = 605.0

[node name="Button9" parent="VBoxContainer/Test_Block" instance=ExtResource( 7 )]
margin_left = 723.0
margin_top = 488.0
margin_right = 1013.0
margin_bottom = 605.0
size_flags_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -350.0
margin_bottom = -60.0
size_flags_vertical = 10

[node name="M_Next_btn2" type="TextureButton" parent="HBoxContainer"]
margin_left = 800.0
margin_right = 1080.0
margin_bottom = 296.0
rect_min_size = Vector2( 280, 296 )
rect_pivot_offset = Vector2( 140, 0 )
size_flags_horizontal = 10
theme = ExtResource( 4 )

[node name="bg" type="TextureRect" parent="HBoxContainer/M_Next_btn2"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 16 )

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/M_Next_btn2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -23.0
margin_right = 36.0
margin_bottom = 23.0
rect_pivot_offset = Vector2( 36, 23 )
texture = ExtResource( 6 )

[node name="MainTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 4096.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
playback_speed = 2.0
anims/Done = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="WorldEnvironment" parent="." instance=ExtResource( 10 )]

[node name="Test_Over" parent="." instance=ExtResource( 13 )]
visible = false

[node name="Life" parent="." instance=ExtResource( 9 )]
anchor_top = 0.13
anchor_bottom = 0.13

[node name="Quit_Scene" parent="." instance=ExtResource( 14 )]

[node name="Done" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.865
anchor_right = 0.5
anchor_bottom = 0.865
margin_left = -422.0
margin_right = 412.0
margin_bottom = 294.0
theme = ExtResource( 5 )
texture_normal = ExtResource( 15 )

[node name="Label" type="Label" parent="Done"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Continue"
align = 1
valign = 1

[connection signal="Wrong_Answer" from="VBoxContainer/Test_Block/Button" to="." method="_on_Wrong_Answer"]
[connection signal="Wrong_Answer" from="VBoxContainer/Test_Block/Button2" to="." method="_on_Wrong_Answer"]
[connection signal="Wrong_Answer" from="VBoxContainer/Test_Block/Button3" to="." method="_on_Wrong_Answer"]
[connection signal="Wrong_Answer" from="VBoxContainer/Test_Block/Button4" to="." method="_on_Wrong_Answer"]
[connection signal="Wrong_Answer" from="VBoxContainer/Test_Block/Button5" to="." method="_on_Wrong_Answer"]
[connection signal="Wrong_Answer" from="VBoxContainer/Test_Block/Button6" to="." method="_on_Wrong_Answer"]
[connection signal="Wrong_Answer" from="VBoxContainer/Test_Block/Button7" to="." method="_on_Wrong_Answer"]
[connection signal="Wrong_Answer" from="VBoxContainer/Test_Block/Button8" to="." method="_on_Wrong_Answer"]
[connection signal="Wrong_Answer" from="VBoxContainer/Test_Block/Button9" to="." method="_on_Wrong_Answer"]
[connection signal="button_down" from="HBoxContainer/M_Next_btn2" to="." method="_on_Next_button_down"]
[connection signal="button_down" from="Done" to="." method="_on_Done_button_down"]
